Fix header alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,6 @@
 }
 
 header {
-  font-size: 1.8rem;
   font-weight: bold;
   height: 10vh;
   width: 100vw;
@@ -14,6 +13,20 @@ header {
   padding-left: 10px;
   padding-top: 20px;
   margin-bottom: 20px;
+}
+
+.OCDB {
+  font-size: 1.8rem;
+  float: left;
+  margin: auto;
+  padding: auto;
+}
+
+.welcome_message {
+  font-size: 1rem;
+  float: right;
+  margin: auto;
+  padding: auto;
 }
 
 .container {
